--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
         <!-- - section MASTHEAD FULLSCREEN -->
          <div class="stories-timline-bg">
         <!-- section SERVICE # 3 -->
-        <section class="section section-services section-content mb-medium pt-medium"
+        <section class="p-0 pt-md-4 section section-services section-content mb-medium pt-medium"
           data-arts-os-animation="data-arts-os-animation">
           <div class="container section-services__container">
             <div class="row no-gutters align-items-center justify-content-center">
@@ -709,8 +709,7 @@
                         <!-- label by default -->
                         <div class="js-split-text split-text" data-split-text-type="lines"
                           data-split-text-set="lines">
-                          <p class="product_desc text-primary">Cherish and preserve your most treasured moments with a
-                            beautifully crafted storytelling photo book.</p>
+                          <p class="product_desc text-primary">Cherish and preserve your most treasured moments with a beautifully crafted storytelling photo book.</p>
                           <a class="button button_bordered button_accent mb-0-5" data-hover="Learn More"
                             href="product-details.html"><span class="button__label-hover">Learn More</span></a>
                         </div>
@@ -745,8 +744,7 @@
                         <!-- label by default -->
                         <div class="js-split-text split-text " data-split-text-type="lines"
                           data-split-text-set="lines">
-                          <p class="product_desc text-primary">Celebrate your journey together with a personalized
-                            book filled with romance, memories, and heartfelt moments.</p>
+                          <p class="product_desc text-primary">Celebrate your journey together with a personalized book filled with romance, memories, and heartfelt moments.</p>
                           <a class="button button_bordered button_accent mb-0-5" data-hover="Learn More"
                             href="product-details.html"><span class="button__label-hover">Learn More</span></a>
                         </div>
@@ -779,8 +777,7 @@
                         <!-- label by default -->
                         <div class=" js-split-text split-text" data-split-text-type="lines"
                           data-split-text-set="lines">
-                          <p class="product_desc text-primary">Showcase your career milestones, remarkable
-                            achievements, and inspiring success story in a professionally designed keepsake.</p>
+                          <p class="product_desc text-primary">Showcase your career milestones, remarkable achievements, and inspiring success story in a professionally designed keepsake.</p>
                           <a class="button button_bordered button_accent mb-0-5" data-hover="Learn More"
                             href="product-details.html"><span class="button__label-hover">Learn More</span></a>
                         </div>
@@ -1368,7 +1365,7 @@
           <div class="about_us section">
             <div class="container">
               <div class="row justify-content-center">
-                <div class="col-md-6 col-12">
+                <div class="col-md-6 col-12 px-0">
                   <div class="about_us_content">
 
                     <div class="green-box"></div>
@@ -1376,7 +1373,7 @@
                       <img src="img/general/full_name.svg" alt="">
                     <p>Our larger vision, our north star, is to create a world where every individual feels seen, heard, and valued. Once Upon a Time is more than a business to us. It’s our way of creating something that puts out net positive energy into the world.  It’s about capturing wisdom, preserving laughter, and strengthening bonds across generations. It’s about ensuring that every person—no matter where they come from—has a chance to share their story and be remembered.
                       Because we truly believe that even the most ordinary lives hold the most extraordinary stories</p>
-                      <b>That's why we created Once Upon A Time.</b>
+                      <b class="px-2 text-center">That's why we created Once Upon A Time.</b>
                       <img style="width:10%;" src="img/general/log_icon_green.svg" alt="">
                       <span>Where Memories Lives On</span>
                      
@@ -1398,7 +1395,7 @@
               <div class="row no-gutters h-100">
                 <!-- section IMAGE -->
                 <div class="col-lg-6 col-12 order-lg-1"> 
-                  <div class="lazy-bg" data-src="img/assets/sectionContacts/img-1.jpg"></div>
+                  <div class="lazy-bg" data-src="img/assets/sectionContacts/img-1.jpg" style="height: 100vh;"></div>
 
                 </div>
                 <!-- - section IMAGE -->
