Timeline Popup Updates

--- a/how_it_works.html
+++ b/how_it_works.html
@@ -239,13 +239,43 @@
         <!-- fullscreen menu -->
         <div class="header__wrapper-menu mt-0">
           <ul class="menu-overlay js-menu-overlay">
-            <li class="menu-item-has-children"><a class="h2" href="page-inner-about-2.html"
+            <li class="menu-item-has-children"><a class="h2" href="index.html#wsm"
+                data-pjax-link="overlayMenu">
+                <div class="menu-overlay__item-wrapper split-text js-split-text" data-split-text-type="lines">Why Stories Matters?
+                </div>
+              </a>
+            </li>
+            <li class="menu-item-has-children"><a class="h2" href="index.html#ourproducts"
+                data-pjax-link="overlayMenu">
+                <div class="menu-overlay__item-wrapper split-text js-split-text" data-split-text-type="lines">Products
+                </div>
+              </a>
+            </li>
+            <li class="menu-item-has-children"><a class="h2" href="index.html#hiw"
+                data-pjax-link="overlayMenu">
+                <div class="menu-overlay__item-wrapper split-text js-split-text" data-split-text-type="lines">How it works
+                </div>
+              </a>
+            </li>
+            <li class="menu-item-has-children"><a class="h2" href="index.html#faqs"
+                data-pjax-link="overlayMenu">
+                <div class="menu-overlay__item-wrapper split-text js-split-text" data-split-text-type="lines">FAQs
+                </div>
+              </a>
+            </li>
+            <li class="menu-item-has-children"><a class="h2" href="index.html#reviews"
+                data-pjax-link="overlayMenu">
+                <div class="menu-overlay__item-wrapper split-text js-split-text" data-split-text-type="lines">Customer Reviews
+                </div>
+              </a>
+            </li>
+            <li class="menu-item-has-children"><a class="h2" href="aboutus.html"
                 data-pjax-link="overlayMenu">
                 <div class="menu-overlay__item-wrapper split-text js-split-text" data-split-text-type="lines">About Us
                 </div>
               </a>
             </li>
-            <li class="menu-item-has-children"><a class="h2" href="page-inner-contacts-1.html"
+            <li class="menu-item-has-children"><a class="h2" href="index.html#contact_us"
                 data-pjax-link="overlayMenu">
                 <div class="menu-overlay__item-wrapper split-text js-split-text" data-split-text-type="lines">Contact Us
                 </div>
