--- a/faq.html
+++ b/faq.html
@@ -239,13 +239,43 @@
         <!-- fullscreen menu -->
         <div class="header__wrapper-menu mt-0">
           <ul class="menu-overlay js-menu-overlay">
-            <li class="menu-item-has-children"><a class="h2" href="page-inner-about-2.html"
+            <li class="menu-item-has-children"><a class="h2" href="index.html#wsm"
+                data-pjax-link="overlayMenu">
+                <div class="menu-overlay__item-wrapper split-text js-split-text" data-split-text-type="lines">Why Stories Matters?
+                </div>
+              </a>
+            </li>
+            <li class="menu-item-has-children"><a class="h2" href="index.html#ourproducts"
+                data-pjax-link="overlayMenu">
+                <div class="menu-overlay__item-wrapper split-text js-split-text" data-split-text-type="lines">Products
+                </div>
+              </a>
+            </li>
+            <li class="menu-item-has-children"><a class="h2" href="index.html#hiw"
+                data-pjax-link="overlayMenu">
+                <div class="menu-overlay__item-wrapper split-text js-split-text" data-split-text-type="lines">How it works
+                </div>
+              </a>
+            </li>
+            <!-- <li class="menu-item-has-children"><a class="h2" href="index.html#faqs"
+                data-pjax-link="overlayMenu">
+                <div class="menu-overlay__item-wrapper split-text js-split-text" data-split-text-type="lines">FAQs
+                </div>
+              </a>
+            </li> -->
+            <li class="menu-item-has-children"><a class="h2" href="index.html#reviews"
+                data-pjax-link="overlayMenu">
+                <div class="menu-overlay__item-wrapper split-text js-split-text" data-split-text-type="lines">Customer Reviews
+                </div>
+              </a>
+            </li>
+            <li class="menu-item-has-children"><a class="h2" href="aboutus.html"
                 data-pjax-link="overlayMenu">
                 <div class="menu-overlay__item-wrapper split-text js-split-text" data-split-text-type="lines">About Us
                 </div>
               </a>
             </li>
-            <li class="menu-item-has-children"><a class="h2" href="page-inner-contacts-1.html"
+            <li class="menu-item-has-children"><a class="h2" href="index.html#contact_us"
                 data-pjax-link="overlayMenu">
                 <div class="menu-overlay__item-wrapper split-text js-split-text" data-split-text-type="lines">Contact Us
                 </div>
@@ -304,8 +334,6 @@
           <div class="section-masthead__inner container-fluid">
             <header class="row section-masthead__header justify-content-center">
               <div class="col">
-                <div class="section-masthead__subheading small-caps mt-0 mb-1 mb-md-2 split-text js-split-text"
-                  data-split-text-type="lines,words" data-split-text-set="words"><span>OUAT</span></div>
                 <div class="w-100"></div>
                 <div class="section-masthead__heading split-text js-split-text" data-split-text-type="lines,words"
                   data-split-text-set="words">
@@ -748,126 +776,7 @@
       <!-- PAGE FOOTER -->
       <footer class="footer container-fluid" id="page-footer" data-arts-theme-text="dark"
         data-arts-footer-logo="primary">
-        <!-- widgets top area -->
-        <div class="footer__area pt-md-5 pt-sm-3 pb-md-3 pb-sm-1 pt-2 pb-0 footer__area-border-top">
-          <div class="row">
-            <!-- call to action -->
-            <div class="col-lg-5">
-              <section class="widget widget_Once Upon A Time_cta">
-                <!-- header -->
-                <h2 class="h2 mt-0 mb-0-5">Ready to Capture the Moments?</h2>
-                <!-- - header -->
-                <!-- button --><a class="button button_solid button_black mb-0-5" data-hover="Get in Touch"
-                  href="page-inner-contacts-1.html"><span class="button__label-hover">Get in Touch</span></a>
-                <!-- - button -->
-              </section>
-            </div>
-            <!-- - call to action -->
-            <div class="col-lg-7">
-              <div class="row justify-content-lg-between">
-                <!-- widget MENU #1 -->
-                <div class="col-lg-3 col-sm-6 col-12">
-                  <section class="widget widget_nav_menu">
-                    <!-- header -->
-                    <h2 class="widgettitle">2020' Works</h2>
-                    <!-- - header -->
-                    <!-- content -->
-                    <ul class="menu js-menu">
-                      <li><a href="project-details-1-fullscreen-center.html">Nordic Adventure</a>
-                      </li>
-                      <li><a href="project-details-2-bottom-center.html">Sunrise in Desert</a>
-                      </li>
-                      <li><a href="project-details-3-halfscreen-left-right.html">Cassio Apartment</a>
-                      </li>
-                      <li><a href="project-details-4-halfscreen-left-left.html">Nothern Wave</a>
-                      </li>
-                      <li><a href="project-details-5-bottom-container-center.html">On the Edge</a>
-                      </li>
-                      <li><a href="project-details-6-bottom-fullwidth.html">Paysage Fiction</a>
-                      </li>
-                      <li><a href="project-details-7-fullscreen-left.html">Silence &amp; Noise</a>
-                      </li>
-                    </ul>
-                    <!-- - content -->
-                  </section>
-                </div>
-                <!-- - widget MENU #1 -->
-                <!-- widget MENU #2 -->
-                <div class="col-lg-3 col-sm-6 col-12">
-                  <section class="widget widget_nav_menu">
-                    <!-- header -->
-                    <h2 class="widgettitle">2019' Works</h2>
-                    <!-- - header -->
-                    <!-- content -->
-                    <ul class="menu js-menu">
-                      <li><a href="project-details-8-halfscreen-right-left.html">Minimalex Cosmetics</a>
-                      </li>
-                      <li><a href="project-details-9-fullscreen-center.html">La Isla Bonita</a>
-                      </li>
-                      <li><a href="project-details-10-halfscreen-left-right.html">Kinsey Premium Furniture</a>
-                      </li>
-                      <li><a href="project-details-11-fullscreen-center.html">Dancing in the Dark</a>
-                      </li>
-                      <li><a href="project-details-12-bottom-container-center.html">The Silent Listener</a>
-                      </li>
-                      <li><a href="project-details-13-bottom-container-center.html">Arrigo Casual Accessories</a>
-                      </li>
-                    </ul>
-                    <!-- - content -->
-                  </section>
-                </div>
-                <!-- - widget MENU #2 -->
-                <!-- widget MENU #3 -->
-                <div class="col-lg-3 col-sm-6 col-12">
-                  <section class="widget widget_nav_menu">
-                    <!-- header -->
-                    <h2 class="widgettitle">Services</h2>
-                    <!-- - header -->
-                    <!-- content -->
-                    <ul class="menu js-menu">
-                      <li><a href="#">Weddings</a>
-                      </li>
-                      <li><a href="#">Portraits</a>
-                      </li>
-                      <li><a href="#">Commercial</a>
-                      </li>
-                      <li><a href="#">Studio</a>
-                      </li>
-                      <li><a href="#">Reportages</a>
-                      </li>
-                      <li><a href="#">Corporate</a>
-                      </li>
-                    </ul>
-                    <!-- - content -->
-                  </section>
-                </div>
-                <!-- - widget MENU #3 -->
-                <!-- widget MENU #4 -->
-                <div class="col-lg-3 col-sm-6 col-12">
-                  <section class="widget widget_nav_menu">
-                    <!-- header -->
-                    <h2 class="widgettitle">Studio</h2>
-                    <!-- - header -->
-                    <!-- content -->
-                    <ul class="menu js-menu">
-                      <li><a href="page-inner-services-1.html">Services</a>
-                      </li>
-                      <li><a href="page-inner-about-1.html">About</a>
-                      </li>
-                      <li><a href="blog-grid-2-columns.html">Blog</a>
-                      </li>
-                      <li><a href="page-inner-contacts-1.html">Contacts</a>
-                      </li>
-                    </ul>
-                    <!-- - content -->
-                  </section>
-                </div>
-                <!-- - widget MENU #4 -->
-              </div>
-            </div>
-          </div>
-        </div>
-        <!-- - widgets top area -->
+        
         <!-- widgets bottom area -->
         <div class="footer__area footer__area-border-top pt-sm-3 pb-sm-1 pt-2 pb-0">
           <div class="row align-items-center">
