--- a/aboutus.html
+++ b/aboutus.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" type="text/css" href="css/vendor.css"/>
     <!-- Template Main Stylesheet -->
     <link rel="stylesheet" type="text/css" href="css/main.css"/>
+    <!-- Fonts Apply -->
+    <link rel="stylesheet" type="fonts" href="fonts/main.css"/>
     <!-- Favicons & App Icons -->
     <link rel="apple-touch-icon" sizes="57x57" href="img/content/apple-icon-57x57.png"/>
     <link rel="apple-touch-icon" sizes="60x60" href="img/content/apple-icon-60x60.png"/>
