working on mobile bug 16/04/2025

--- a/index.html
+++ b/index.html
@@ -1725,22 +1725,22 @@
     <!-- - PAGE MAIN -->
   </div>
   
-                  <!-- Modal -->
-  
-                  <div id="stories_popup" class="popup modal-content animate__animated animate__fadeIn">
-                    <span class="close close-button closeModal" onclick="closePopup()">&times;</span>
-                    <div class="model-wrapper overflow-model">
-                      <div class="left-content">
-                        <h3 id="popup-title"></h3>
-                        <p id="popup-description" class="typing-container"></p>
-                        <!-- <p id="body">Cochin</p>
-                            <p id="handwritten_notes">Falidasi Triasie</p>
-                            <p id="dates">engravers gothic bt</p> -->
-                      </div>
-                      <div class="right-image" id="popup-images"></div>
-                    </div>
-                  </div>
-                </div>
+  <!-- Modal -->
+
+  <div id="stories_popup" class="popup modal-content animate__animated animate__fadeIn">
+      <span class="close close-button closeModal" onclick="closePopup()">&times;</span>
+      <div class="model-wrapper overflow-model">
+        <div class="left-content">
+          <h3 id="popup-title"></h3>
+          <p id="popup-description" class="typing-container"></p>
+          <!-- <p id="body">Cochin</p>
+              <p id="handwritten_notes">Falidasi Triasie</p>
+              <p id="dates">engravers gothic bt</p> -->
+        </div>
+        <div class="right-image" id="popup-images"></div>
+      </div>
+    </div>
+  <!-- </div> -->
   
   <canvas id="js-webgl"></canvas>
   <!-- PhotoSwipe -->
@@ -1957,7 +1957,7 @@
   <script
     src="https://maps.googleapis.com/maps/api/js?callback=Function.prototype&amp;key=AIzaSyBwR_TrF6h7-pMxkKv_q2t8BXX3w6QuFOc"
     async></script>
-<!-- Accordian -->
+  <!-- Accordian -->
     <script>
       const accordionButtons = document.querySelectorAll('.accordion button');
     
