add button in open opoup 16/04/2025

--- a/index.html
+++ b/index.html
@@ -540,8 +540,11 @@
                     <div class="card-body">
                       <h6 class="card-title">Early Adulthood</h6>
                       <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
-                      <a onclick="showPopup(2)" class="trigger button button_bordered button_black mb-0" id="myBtn"
-                        data-hover="View" href="#"><span class="button__label-hover">View</span></a>
+                       <button onclick="showPopup(2)" class="trigger button button_bordered button_black mb-0" id="myBtn" data-hover="View" >
+                        <span class="button__label-hover">View</span>
+                      </button>
+                      <!-- <a onclick="showPopup(2)" class="trigger button button_bordered button_black mb-0" id="myBtn"
+                        data-hover="View" href="#"><span class="button__label-hover">View</span></a> -->
                     </div>
                   </div>
                   <div class="card mt-5">
@@ -621,9 +624,12 @@
                     <img src="img/assets/timeline/timeline03.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h6 class="card-title">Early Adulthood</h6>
+                      <button onclick="showPopup(2)" class="trigger button button_bordered button_black mb-0" id="myBtn" data-hover="View" >
+                        <span class="button__label-hover">View</span>
+                      </button>
                       <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
-                      <a onclick="showPopup(2)" class="trigger button button_bordered button_black mb-0" id="myBtn"
-                        data-hover="View" href="#"><span class="button__label-hover">View</span></a>
+                      <!-- <a onclick="showPopup(2)" class="trigger button button_bordered button_black mb-0" id="myBtn"
+                        data-hover="View" href="#"><span class="button__label-hover">View</span></a> -->
                     </div>
                   </div>
                   <div class="card mt-5">
