timeline card thumbnail images update

--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@
                 <div class="cards-wrapper animation"  id="scrollTarget" >
   
                   <div class="card mb-5">
-                    <img src="img/assets/timeline/timeline01.jpg" class="card-img-top" alt="...">
+                    <img src="img/assets/timeline/timeline01.jpg" class="card-img-top" alt="Childhood Memories">
                     <div class="card-body">
                       <h6 class="card-title">Childhood Memories</h6>
                       <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
@@ -527,7 +527,7 @@
                     </div>
                   </div>
                   <div class="card mt-5">
-                    <img src="img/assets/timeline/timeline02.jpg" class="card-img-top" alt="...">
+                    <img src="img/assets/timeline/timeline02.jpg" class="card-img-top" alt="School and College Days">
                     <div class="card-body">
                       <h6 class="card-title">School and College Days</h6>
                       <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
@@ -536,7 +536,7 @@
                     </div>
                   </div>
                   <div class="card mb-5">
-                    <img src="img/assets/timeline/timeline03.jpg" class="card-img-top" alt="...">
+                    <img src="img/assets/timeline/timeline03.jpg" class="card-img-top" alt="Early Adulthood">
                     <div class="card-body">
                       <h6 class="card-title">Early Adulthood</h6>
                       <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
@@ -554,7 +554,7 @@
                     </div>
                   </div>
                   <div class="card mb-5">
-                    <img src="img/assets/timeline/timeline05.png" class="card-img-top" alt="...">
+                    <img src="img/assets/timeline/timeline05.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h6 class="card-title">Building a Career, Purpose, or Contribution</h6>
                       <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
@@ -563,7 +563,7 @@
                     </div>
                   </div>
                   <div class="card mt-5">
-                    <img src="img/assets/timeline/timeline06.png" class="card-img-top" alt="...">
+                    <img src="img/assets/timeline/timeline06.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h6 class="card-title">Triumphs & Challenges</h6>
                       <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
@@ -572,7 +572,7 @@
                     </div>
                   </div>
                   <div class="card mb-5">
-                    <img src="img/assets/timeline/timeline08.png" class="card-img-top" alt="...">
+                    <img src="img/assets/timeline/timeline07.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h6 class="card-title">Golden Years</h6>
                       <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
@@ -581,7 +581,7 @@
                     </div>
                   </div>
                   <div class="card mt-5">
-                    <img src="img/assets/timeline/timeline09.png" class="card-img-top" alt="...">
+                    <img src="img/assets/timeline/timeline09.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h6 class="card-title">Wisdom and Reflections</h6>
                       <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
@@ -590,7 +590,7 @@
                     </div>
                   </div>
                   <div class="card mb-5">
-                    <img src="img/assets/timeline/timeline10.png" class="card-img-top" alt="...">
+                    <img src="img/assets/timeline/timeline08.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h6 class="card-title">Legacy & Hopes for the Future</h6>
                       <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
@@ -645,7 +645,7 @@
                     </div>
                   </div>
                   <div class="card mt-5">
-                    <img src="img/assets/timeline/timeline06.png" class="card-img-top" alt="...">
+                    <img src="img/assets/timeline/timeline06.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h6 class="card-title">Triumphs & Challenges</h6>
                       <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
@@ -654,7 +654,7 @@
                     </div>
                   </div>
                   <div class="card mb-5">
-                    <img src="img/assets/timeline/timeline08.png" class="card-img-top" alt="...">
+                    <img src="img/assets/timeline/timeline07.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h6 class="card-title">Golden Years</h6>
                       <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
@@ -663,7 +663,7 @@
                     </div>
                   </div>
                   <div class="card mt-5">
-                    <img src="img/assets/timeline/timeline09.png" class="card-img-top" alt="...">
+                    <img src="img/assets/timeline/timeline08.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h6 class="card-title">Wisdom and Reflections</h6>
                       <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
@@ -672,7 +672,7 @@
                     </div>
                   </div>
                   <div class="card mb-5">
-                    <img src="img/assets/timeline/timeline10.png" class="card-img-top" alt="...">
+                    <img src="img/assets/timeline/timeline09.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h6 class="card-title">Legacy & Hopes for the Future</h6>
                       <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
