--- a/index.html
+++ b/index.html
@@ -1655,9 +1655,9 @@
                     <!-- - header -->
                     <!-- content -->
                     <ul class="menu js-menu">
-                      <li><a href="#">Terms of service</a>
+                      <li><a href="terms-of-service.html">Terms of service</a>
                       </li>
-                      <li><a href="#">Privacy Policy</a>
+                      <li><a href="privacy-policy.html">Privacy Policy</a>
                       </li>
                     </ul>
                     <!-- - content -->
