--- a/aboutus.html
+++ b/aboutus.html
@@ -312,7 +312,7 @@
             <div class="row">
               <!-- call to action -->
               <div class="col-lg-5">
-                <section class="widget widget_rhye_cta">
+                <section class="widget widget_ot_cta">
                   <!-- header -->
                   <h2 class="h2 mt-0 mb-0-5">Ready to Capture the Moments?</h2>
                   <!-- - header -->
@@ -431,11 +431,11 @@
             <div class="row align-items-center">
               <!-- widget LOGO -->
               <div class="col-lg-3 footer__column text-center text-lg-left order-lg-1">
-                <section class="widget widget_rhye_logo">
+                <section class="widget widget_ot_logo">
                   <!-- content --><a class="logo" href="index.html">
                     <div class="logo__wrapper-img">
-                      <!-- primary logo version (for light backgrounds)--><img class="logo__img-primary" src="img/general/logo-black.svg" alt="Rhye HTML5 Template" height="20"/>
-                      <!-- secondary logo version (for dark backgrounds)--><img class="logo__img-secondary" src="img/general/logo-white.svg" alt="Rhye HTML5 Template" height="20"/>
+                      <!-- primary logo version (for light backgrounds)--><img class="logo__img-primary" src="img/general/logo-black.svg" alt="Once Upon A Time" height="20"/>
+                      <!-- secondary logo version (for dark backgrounds)--><img class="logo__img-secondary" src="img/general/logo-white.svg" alt="Once Upon A Time" height="20"/>
                     </div></a>
                   <!-- - content -->
                 </section>
@@ -443,7 +443,7 @@
               <!-- - widget LOGO -->
               <!-- widget SOCIAL -->
               <div class="col-lg-3 footer__column text-center text-lg-right order-lg-3">
-                <section class="widget widget_rhye_social">
+                <section class="widget widget_ot_social">
                   <!-- content -->
                   <ul class="social">
                     <li class="social__item"><a class="fa fa-facebook-f" href="#"></a></li>
@@ -460,7 +460,7 @@
                 <section class="widget widget_text">
                   <!-- content -->
                   <div class="textwidget">
-                    <p><small>© 2023 Rhye – AJAX Portfolio HTML5 Template. Crafted by <a href="https://themeforest.net/user/artemsemkin" target="_blank">Artem Semkin</a></small></p>
+                  <p><small>Copyrights© 2025 Once Upon A Time Crafted by <a href="#" target="_blank">OUAT</a></small>
                   </div>
                   <!-- - content -->
                 </section>
