--- a/faq.html
+++ b/faq.html
@@ -257,12 +257,12 @@
                 </div>
               </a>
             </li>
-            <!-- <li class="menu-item-has-children"><a class="h2" href="index.html#faqs"
+            <li class="menu-item-has-children"><a class="h2" href="index.html#faqs"
                 data-pjax-link="overlayMenu">
                 <div class="menu-overlay__item-wrapper split-text js-split-text" data-split-text-type="lines">FAQs
                 </div>
               </a>
-            </li> -->
+            </li>
             <li class="menu-item-has-children"><a class="h2" href="index.html#reviews"
                 data-pjax-link="overlayMenu">
                 <div class="menu-overlay__item-wrapper split-text js-split-text" data-split-text-type="lines">Customer Reviews
@@ -284,43 +284,7 @@
           </ul>
         </div>
         <!-- - fullscreen menu -->
-        <!-- fullscreen widgets -->
-        <div class="header__wrapper-overlay-widgets">
-          <div class="row">
-            <!-- widget TEXT -->
-            <div class="col-lg-4 header__widget">
-              <div class="header__widget-title small-caps js-split-text split-text" data-split-text-type="lines">
-                Contacts</div>
-              <div class="header__widget-content js-split-text split-text" data-split-text-type="lines">
-                <p><a href="onceuponatime@example.com">onceuponatime@example.com</a><br />+1 859-795-9217<br />+1
-                  716-913-6279<br />
-                </p>
-              </div>
-            </div>
-            <!-- - widget TEXT -->
-            <!-- widget TEXT -->
-            <div class="col-lg-4 header__widget">
-              <div class="header__widget-title small-caps js-split-text split-text" data-split-text-type="lines">Office
-              </div>
-              <div class="header__widget-content js-split-text split-text" data-split-text-type="lines">
-                <p>4903 Mayo Street<br />Cincinnati, KY 45202<br />USA<br />
-                </p>
-              </div>
-            </div>
-            <!-- - widget TEXT -->
-            <!-- widget TEXT -->
-            <div class="col-lg-4 header__widget">
-              <div class="header__widget-title small-caps js-split-text split-text" data-split-text-type="lines">Want to
-                Work with Me?</div>
-              <div class="header__widget-content js-split-text split-text" data-split-text-type="lines">
-                <p><a href="page-inner-contacts-1.html">Get in Touch</a><br />
-                </p>
-              </div>
-            </div>
-            <!-- - widget TEXT -->
-          </div>
-        </div>
-        <!-- - fullscreen widgets -->
+       
       </div>
       <!-- - fullscreen overlay container -->
     </header>
