--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
               <div class="header__widget-title small-caps js-split-text split-text" data-split-text-type="lines">
                 Contacts</div>
               <div class="header__widget-content js-split-text split-text" data-split-text-type="lines">
-                <p><a href="onceuponatime@example.com">onceuponatime@example.com</a><br />+1 859-795-9217<br />+1
+                <p><a href="mailto: info@onceuponatime">info@onceuponatime</a><br />+1 859-795-9217<br />+1
                   716-913-6279<br />
                 </p>
               </div>
@@ -307,8 +307,7 @@
               <div class="header__widget-title small-caps js-split-text split-text" data-split-text-type="lines">Office
               </div>
               <div class="header__widget-content js-split-text split-text" data-split-text-type="lines">
-                <p>4903 Mayo Street<br />Cincinnati, KY 45202<br />USA<br />
-                </p>
+                <p>160 Robinson Road, <br> #25-01 Singapore 068914</p>
               </div>
             </div>
             <!-- - widget TEXT -->
@@ -317,7 +316,7 @@
               <div class="header__widget-title small-caps js-split-text split-text" data-split-text-type="lines">Want to
                 Work with Me?</div>
               <div class="header__widget-content js-split-text split-text" data-split-text-type="lines">
-                <p><a href="page-inner-contacts-1.html">Get in Touch</a><br />
+                <p><a href="index.html#contact_us">Get in Touch</a><br />
                 </p>
               </div>
             </div>
