--- a/page-inner-contacts-1.html
+++ b/page-inner-contacts-1.html
@@ -446,7 +446,7 @@
               <div class="col-lg-4 header__widget">
                 <div class="header__widget-title small-caps js-split-text split-text" data-split-text-type="lines">Contacts</div>
                 <div class="header__widget-content js-split-text split-text" data-split-text-type="lines">
-                  <p><a href="onceuponatime@example.com">onceuponatime@example.com</a><br/>+1 859-795-9217<br/>+1 716-913-6279<br/>
+                  <p><a href="mailto: info@onceuponatime">info@onceuponatime</a><br/>+1 859-795-9217<br/>+1 716-913-6279<br/>
                   </p>
                 </div>
               </div>
