--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -185,55 +185,94 @@
           </div>
         </div>
         <!-- - top bar -->
-        <!-- fullscreen overlay container -->
-        <div class="header__wrapper-overlay-menu container-fluid container-fluid_paddings">
-          <!-- fullscreen menu -->
-          <div class="header__wrapper-menu mt-0">
-            <ul class="menu-overlay js-menu-overlay">
-              <li  class="menu-item-has-children"><a class="h2" href="page-inner-about-2.html" data-pjax-link="overlayMenu">
-                <div class="menu-overlay__item-wrapper split-text js-split-text" data-split-text-type="lines">About Us</div></a>
+       <!-- fullscreen overlay container -->
+      <div class="header__wrapper-overlay-menu container-fluid container-fluid_paddings">
+        <!-- fullscreen menu -->
+        <div class="header__wrapper-menu mt-0">
+          <ul class="menu-overlay js-menu-overlay">
+            <li class="menu-item-has-children"><a class="h2" href="#wsm"
+                data-pjax-link="overlayMenu">
+                <div class="menu-overlay__item-wrapper split-text js-split-text" data-split-text-type="lines">Why Stories Matters?
+                </div>
+              </a>
             </li>
-              <li  class="menu-item-has-children"><a class="h2" href="page-inner-contacts-1.html" data-pjax-link="overlayMenu">
-                <div class="menu-overlay__item-wrapper split-text js-split-text" data-split-text-type="lines">Contact Us</div></a>
+            <li class="menu-item-has-children"><a class="h2" href="#ourproducts"
+                data-pjax-link="overlayMenu">
+                <div class="menu-overlay__item-wrapper split-text js-split-text" data-split-text-type="lines">Products
+                </div>
+              </a>
             </li>
-            </ul>
-          </div>
-          <!-- - fullscreen menu -->
-          <!-- fullscreen widgets -->
-          <div class="header__wrapper-overlay-widgets">
-            <div class="row">
-              <!-- widget TEXT -->
-              <div class="col-lg-4 header__widget">
-                <div class="header__widget-title small-caps js-split-text split-text" data-split-text-type="lines">Contacts</div>
-                <div class="header__widget-content js-split-text split-text" data-split-text-type="lines">
-                  <p><a href="onceuponatime@example.com">onceuponatime@example.com</a><br/>+1 859-795-9217<br/>+1 716-913-6279<br/>
-                  </p>
+            <li class="menu-item-has-children"><a class="h2" href="#hiw"
+                data-pjax-link="overlayMenu">
+                <div class="menu-overlay__item-wrapper split-text js-split-text" data-split-text-type="lines">How it works
                 </div>
-              </div>
-              <!-- - widget TEXT -->
-              <!-- widget TEXT -->
-              <div class="col-lg-4 header__widget">
-                <div class="header__widget-title small-caps js-split-text split-text" data-split-text-type="lines">Office</div>
-                <div class="header__widget-content js-split-text split-text" data-split-text-type="lines">
-                  <p>4903 Mayo Street<br/>Cincinnati, KY 45202<br/>USA<br/>
-                  </p>
+              </a>
+            </li>
+            <li class="menu-item-has-children"><a class="h2" href="#faqs"
+                data-pjax-link="overlayMenu">
+                <div class="menu-overlay__item-wrapper split-text js-split-text" data-split-text-type="lines">FAQs
                 </div>
-              </div>
-              <!-- - widget TEXT -->
-              <!-- widget TEXT -->
-              <div class="col-lg-4 header__widget">
-                <div class="header__widget-title small-caps js-split-text split-text" data-split-text-type="lines">Want to Work with Me?</div>
-                <div class="header__widget-content js-split-text split-text" data-split-text-type="lines">
-                  <p><a href="page-inner-contacts-1.html">Get in Touch</a><br/>
-                  </p>
+              </a>
+            </li>
+            <li class="menu-item-has-children"><a class="h2" href="#reviews"
+                data-pjax-link="overlayMenu">
+                <div class="menu-overlay__item-wrapper split-text js-split-text" data-split-text-type="lines">Customer Reviews
                 </div>
-              </div>
-              <!-- - widget TEXT -->
-            </div>
-          </div>
-          <!-- - fullscreen widgets -->
+              </a>
+            </li>
+            <li class="menu-item-has-children"><a class="h2" href="aboutus.html"
+                data-pjax-link="overlayMenu">
+                <div class="menu-overlay__item-wrapper split-text js-split-text" data-split-text-type="lines">About Us
+                </div>
+              </a>
+            </li>
+            <li class="menu-item-has-children"><a class="h2" href="#contact_us"
+                data-pjax-link="overlayMenu">
+                <div class="menu-overlay__item-wrapper split-text js-split-text" data-split-text-type="lines">Contact Us
+                </div>
+              </a>
+            </li>
+          </ul>
         </div>
-        <!-- - fullscreen overlay container -->
+        <!-- - fullscreen menu -->
+        <!-- fullscreen widgets -->
+        <div class="header__wrapper-overlay-widgets">
+          <div class="row">
+            <!-- widget TEXT -->
+            <div class="col-lg-4 header__widget">
+              <div class="header__widget-title small-caps js-split-text split-text" data-split-text-type="lines">
+                Contacts</div>
+              <div class="header__widget-content js-split-text split-text" data-split-text-type="lines">
+                <p><a href="mailto: info@onceuponatime">info@onceuponatime</a><br />+1 859-795-9217<br />+1
+                  716-913-6279<br />
+                </p>
+              </div>
+            </div>
+            <!-- - widget TEXT -->
+            <!-- widget TEXT -->
+            <div class="col-lg-4 header__widget">
+              <div class="header__widget-title small-caps js-split-text split-text" data-split-text-type="lines">Office
+              </div>
+              <div class="header__widget-content js-split-text split-text" data-split-text-type="lines">
+                <p>160 Robinson Road, <br> #25-01 Singapore 068914</p>
+              </div>
+            </div>
+            <!-- - widget TEXT -->
+            <!-- widget TEXT -->
+            <div class="col-lg-4 header__widget">
+              <div class="header__widget-title small-caps js-split-text split-text" data-split-text-type="lines">Want to
+                Work with Me?</div>
+              <div class="header__widget-content js-split-text split-text" data-split-text-type="lines">
+                <p><a href="index.html#contact_us">Get in Touch</a><br />
+                </p>
+              </div>
+            </div>
+            <!-- - widget TEXT -->
+          </div>
+        </div>
+        <!-- - fullscreen widgets -->
+      </div>
+      <!-- - fullscreen overlay container -->
       </header>
       <!-- - PAGE HEADER -->
       <!-- PAGE MAIN -->
