--- a/index.html
+++ b/index.html
@@ -249,19 +249,19 @@
                 </div>
               </a>
             </li>
-            <li class="menu-item-has-children"><a class="h2" href="#ourproducts"
+            <li class="menu-item-has-children"><a class="h2" href="product-list.html"
                 data-pjax-link="overlayMenu">
                 <div class="menu-overlay__item-wrapper split-text js-split-text" data-split-text-type="lines">Products
                 </div>
               </a>
             </li>
-            <li class="menu-item-has-children"><a class="h2" href="#hiw"
+            <li class="menu-item-has-children"><a class="h2" href="how_it_works.html"
                 data-pjax-link="overlayMenu">
                 <div class="menu-overlay__item-wrapper split-text js-split-text" data-split-text-type="lines">How it works
                 </div>
               </a>
             </li>
-            <li class="menu-item-has-children"><a class="h2" href="#faqs"
+            <li class="menu-item-has-children"><a class="h2" href="faq.html"
                 data-pjax-link="overlayMenu">
                 <div class="menu-overlay__item-wrapper split-text js-split-text" data-split-text-type="lines">FAQs
                 </div>
@@ -280,11 +280,11 @@
               </a>
             </li>
             <li class="menu-item-has-children"><a class="h2" href="#contact_us"
-                data-pjax-link="overlayMenu">
-                <div class="menu-overlay__item-wrapper split-text js-split-text" data-split-text-type="lines">Contact Us
-                </div>
-              </a>
-            </li>
+              data-pjax-link="overlayMenu">
+              <div class="menu-overlay__item-wrapper split-text js-split-text" data-split-text-type="lines">Contact Us
+              </div>
+            </a>
+          </li>
           </ul>
         </div>
         <!-- - fullscreen menu -->
