--- a/product-details.html
+++ b/product-details.html
@@ -245,19 +245,19 @@
                 </div>
               </a>
             </li>
-            <li class="menu-item-has-children"><a class="h2" href="index.html#ourproducts"
+            <li class="menu-item-has-children"><a class="h2" href="product-list.html"
                 data-pjax-link="overlayMenu">
                 <div class="menu-overlay__item-wrapper split-text js-split-text" data-split-text-type="lines">Products
                 </div>
               </a>
             </li>
-            <li class="menu-item-has-children"><a class="h2" href="index.html#hiw"
+            <li class="menu-item-has-children"><a class="h2" href="how_it_works.html"
                 data-pjax-link="overlayMenu">
                 <div class="menu-overlay__item-wrapper split-text js-split-text" data-split-text-type="lines">How it works
                 </div>
               </a>
             </li>
-            <li class="menu-item-has-children"><a class="h2" href="index.html#faqs"
+            <li class="menu-item-has-children"><a class="h2" href="faq.html"
                 data-pjax-link="overlayMenu">
                 <div class="menu-overlay__item-wrapper split-text js-split-text" data-split-text-type="lines">FAQs
                 </div>
@@ -276,11 +276,11 @@
               </a>
             </li>
             <li class="menu-item-has-children"><a class="h2" href="index.html#contact_us"
-                data-pjax-link="overlayMenu">
-                <div class="menu-overlay__item-wrapper split-text js-split-text" data-split-text-type="lines">Contact Us
-                </div>
-              </a>
-            </li>
+              data-pjax-link="overlayMenu">
+              <div class="menu-overlay__item-wrapper split-text js-split-text" data-split-text-type="lines">Contact Us
+              </div>
+            </a>
+          </li>
           </ul>
         </div>
         <!-- - fullscreen menu -->
