--- a/product-list.html
+++ b/product-list.html
@@ -241,31 +241,31 @@
         <!-- fullscreen menu -->
         <div class="header__wrapper-menu mt-0">
           <ul class="menu-overlay js-menu-overlay">
-            <li class="menu-item-has-children"><a class="h2" href="#wsm"
+            <li class="menu-item-has-children"><a class="h2" href="index.html#wsm"
                 data-pjax-link="overlayMenu">
                 <div class="menu-overlay__item-wrapper split-text js-split-text" data-split-text-type="lines">Why Stories Matters?
                 </div>
               </a>
             </li>
-            <li class="menu-item-has-children"><a class="h2" href="#ourproducts"
+            <li class="menu-item-has-children"><a class="h2" href="product-list.html"
                 data-pjax-link="overlayMenu">
                 <div class="menu-overlay__item-wrapper split-text js-split-text" data-split-text-type="lines">Products
                 </div>
               </a>
             </li>
-            <li class="menu-item-has-children"><a class="h2" href="#hiw"
+            <li class="menu-item-has-children"><a class="h2" href="how_it_works.html"
                 data-pjax-link="overlayMenu">
                 <div class="menu-overlay__item-wrapper split-text js-split-text" data-split-text-type="lines">How it works
                 </div>
               </a>
             </li>
-            <li class="menu-item-has-children"><a class="h2" href="#faqs"
+            <li class="menu-item-has-children"><a class="h2" href="faq.html"
                 data-pjax-link="overlayMenu">
                 <div class="menu-overlay__item-wrapper split-text js-split-text" data-split-text-type="lines">FAQs
                 </div>
               </a>
             </li>
-            <li class="menu-item-has-children"><a class="h2" href="#reviews"
+            <li class="menu-item-has-children"><a class="h2" href="index.html#reviews"
                 data-pjax-link="overlayMenu">
                 <div class="menu-overlay__item-wrapper split-text js-split-text" data-split-text-type="lines">Customer Reviews
                 </div>
@@ -277,7 +277,12 @@
                 </div>
               </a>
             </li>
-           
+            <li class="menu-item-has-children"><a class="h2" href="index.html#contact_us"
+              data-pjax-link="overlayMenu">
+              <div class="menu-overlay__item-wrapper split-text js-split-text" data-split-text-type="lines">Contact Us
+              </div>
+            </a>
+          </li>
           </ul>
         </div>
         <!-- - fullscreen menu -->
