popup bug fix 17/04/2025

--- a/index.html
+++ b/index.html
@@ -539,11 +539,8 @@
                     <div class="card-body">
                       <h6 class="card-title">Early Adulthood</h6>
                       <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
-                       <button onclick="showPopup(2)" class="trigger button button_bordered button_black mb-0" id="myBtn" data-hover="View" >
-                        <span class="button__label-hover">View</span>
-                      </button>
-                      <!-- <a onclick="showPopup(2)" class="trigger button button_bordered button_black mb-0" id="myBtn"
-                        data-hover="View" href="#"><span class="button__label-hover">View</span></a> -->
+                      <a onclick="showPopup(2)" class="trigger button button_bordered button_black mb-0" id="myBtn"
+                        data-hover="View" href="#"><span class="button__label-hover">View</span></a>
                     </div>
                   </div>
                   <div class="card mt-5">
@@ -623,12 +620,9 @@
                     <img src="img/assets/timeline/timeline03.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h6 class="card-title">Early Adulthood</h6>
-                      <button onclick="showPopup(2)" class="trigger button button_bordered button_black mb-0" id="myBtn" data-hover="View" >
-                        <span class="button__label-hover">View</span>
-                      </button>
                       <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
-                      <!-- <a onclick="showPopup(2)" class="trigger button button_bordered button_black mb-0" id="myBtn"
-                        data-hover="View" href="#"><span class="button__label-hover">View</span></a> -->
+                      <a onclick="showPopup(2)" class="trigger button button_bordered button_black mb-0" id="myBtn"
+                        data-hover="View" href="#"><span class="button__label-hover">View</span></a>
                     </div>
                   </div>
                   <div class="card mt-5">
@@ -1735,7 +1729,7 @@
   <div id="stories_popup" class="popup modal-content animate__animated animate__fadeIn">
       <span class="close close-button closeModal" onclick="closePopup()">&times;</span>
       <div class="model-wrapper overflow-model">
-        <div class="left-content">
+        <div class="left-content overflow-model1">
           <h3 id="popup-title"></h3>
           <p id="popup-description" class="typing-container"></p>
           <!-- <p id="body">Cochin</p>
