update the aboout us img and add a line in bottom of wsm

--- a/index.html
+++ b/index.html
@@ -688,6 +688,8 @@
   
               </div>
             </div>
+            <div class="col-12 px-5 text-accent"><p class="text-accent" style="font-family: cursive;">Preserving life’s most treasured moments in beautifully crafted legacy books.</p></div>
+            
           </div>
         </section>
         <!-- - section Timeline-->
@@ -700,7 +702,7 @@
               <div class="col-lg-8">
                 <div class="section-masthead__heading split-text js-split-text" data-split-text-type="lines,words"
                   data-split-text-set="words">
-                  <h2 class="mt-0 mb-0 h2">Final Product Look</h2>
+                  <h2 class="mt-0 mb-0 h2">The Experience we provide</h2>
                 </div>
                 <div class="w-100"></div>
                 <div class="section__headline mx-auto"></div>
