--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <meta name="HandheldFriendly" content="true" />
   <meta name="description" content="Once Upon A Time" />
   <!-- Google Fonts -->
-  <link rel="stylesheet" type="text/css"
-    href="https://fonts.googleapis.com/css?family=Cinzel:400,700%7CRaleway:500,500i,600,700%7CMaterial+Icons&amp;display=swap" />
+  <!-- <link rel="stylesheet" type="text/css"
+    href="https://fonts.googleapis.com/css?family=Cinzel:400,700%7CRaleway:500,500i,600,700%7CMaterial+Icons&amp;display=swap" /> -->
   <!-- Template Vendor's Stylesheet -->
   <link rel="stylesheet" type="text/css" href="css/vendor.css" />
   <!-- Template Main Stylesheet -->
