--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -8,8 +8,9 @@
     <meta content="telephone=no" name="format-detection"/>
     <meta name="HandheldFriendly" content="true"/>
     <meta name="description" content="Once Upon A Time – AJAX Portfolio HTML5 Template"/>
-    <!-- Google Fonts -->
-    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Cinzel:400,700%7CRaleway:500,500i,600,700%7CMaterial+Icons&amp;display=swap"/>
+     <!-- Google Fonts -->
+     <link rel="stylesheet" href="/fonts/Cochin/style.css">
+     <!-- <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Cinzel:400,700%7CRaleway:500,500i,600,700%7CMaterial+Icons&amp;display=swap"/> -->
     <!-- Template Vendor's Stylesheet -->
     <link rel="stylesheet" type="text/css" href="css/vendor.css"/>
     <!-- Template Main Stylesheet -->
