--- a/index.html
+++ b/index.html
@@ -780,7 +780,7 @@
                 <div class="col-lg-8">
                   <div class="section-masthead__heading split-text js-split-text" data-split-text-type="lines,words"
                     data-split-text-set="words">
-                    <h2 class="mt-0 mb-0 h2 text-primary">Our Products</h2>
+                    <h2 class="mt-0 mb-0 h2 text-primary minerva-font">Our Products</h2>
                   </div>
                   <div class="w-100"></div>
                   <div class="section__headline mx-auto"></div>
