--- a/index.html
+++ b/index.html
@@ -718,7 +718,14 @@
           <img src="img/general/features.png" alt="">
 
         </div>
-
+        <div class="bg-neutral-2 container-fluid p-0">
+          <div class="row">
+            <div class="col-12 text-center">
+              <a class="button button_bordered button_accent my-2" href="product-features.html">Know More</a>
+            </div>
+          </div>
+        </div>
+        
         <!-- <section class="section section-image section_h-800">
           <div class="section-image__wrapper" data-arts-parallax="data-arts-parallax" data-arts-parallax-factor="0.15">
             <div>
@@ -788,7 +795,7 @@
                 <div class="col-lg-8">
                   <div class="section-masthead__heading split-text js-split-text" data-split-text-type="lines,words"
                     data-split-text-set="words">
-                    <h2 class="mt-0 mb-0 h2 text-primary">Our Products</h2>
+                    <h2 class="mt-0 mb-0 h2 text-primary minerva-font">Our Products</h2>
                   </div>
                   <div class="w-100"></div>
                   <div class="section__headline mx-auto"></div>
